forking or parallel

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,7 @@ host_key_checking=true
 roles_path= roles
 ask_pass        = False
 discovered_interpreter_python = /usr/bin/python3
+forks = 3
 
 [privilege_escalation]
 become = true
