node app playbook

--- a/ansiblePrep/ansible.cfg
+++ b/ansiblePrep/ansible.cfg
@@ -5,6 +5,7 @@ roles_path= roles
 ask_pass        = False
 discovered_interpreter_python = /usr/bin/python3
 forks = 3
+timeout = 10
 
 [privilege_escalation]
 become = true
